--- a/src/index.css
+++ b/src/index.css
@@ -3,57 +3,57 @@
 
 @font-face {
   font-family: "Inter";
-  src: url('/fonts/Inter_18pt-Thin.ttf') format('truetype');
+  src: url('./assets/fonts/Inter-Thin.otf') format('truetype');
   font-weight: 100;
   font-style: normal;
 }
 @font-face {
   font-family: "Inter";
-  src: url('/fonts/Inter_18pt-ExtraLight.ttf') format('truetype');
+  src: url('./assets/fonts/Inter-ExtraLight.otf') format('truetype');
   font-weight: 200;
   font-style: normal;
 }
 @font-face {
   font-family: "Inter";
-  src: url('/fonts/Inter_18pt-Light.ttf') format('truetype');
+  src: url('./assets/fonts/Inter-Light.otf') format('truetype');
   font-weight: 300;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Inter";
-  src: url('/fonts/Inter_18pt-Regular.ttf') format('truetype');
+  src: url('./assets/fonts/Inter-Regular.otf') format('truetype');
   font-weight: 400;
   font-style: normal;
 }
 @font-face {
   font-family: "Inter";
-  src: url('/fonts/Inter_18pt-Medium.ttf') format('truetype');
+  src: url('./assets/fonts/Inter-Medium.otf') format('truetype');
   font-weight: 500;
   font-style: normal;
 }
 @font-face {
   font-family: "Inter";
-  src: url('/fonts/Inter_18pt-SemiBold.ttf') format('truetype');
+  src: url('./assets/fonts/Inter-SemiBold.otf') format('truetype');
   font-weight: 600;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Inter";
-  src: url('/fonts/Inter_18pt-Bold.ttf') format('truetype');
+  src: url('./assets/fonts/Inter-Bold.otf') format('truetype');
   font-weight: 700;
   font-style: normal;
 }
 @font-face {
   font-family: "Inter";
-  src: url('/fonts/Inter_18pt-ExtraBold.ttf') format('truetype');
+  src: url('./assets/fonts/Inter-ExtraBold.otf') format('truetype');
   font-weight: 800;
   font-style: normal;
 }
 @font-face {
   font-family: "Inter";
-  src: url('/fonts/Inter_18pt-Black.ttf') format('truetype');
+  src: url('./assets/fonts/Inter-Black.otf') format('truetype');
   font-weight: 900;
   font-style: normal;
 }
