--- a/src/index.css
+++ b/src/index.css
@@ -99,6 +99,7 @@
   --color-sidebar-ring: var(--sidebar-ring);
   --color-sidebar-label: var(--sidebar-label);
   --color-table-header: var(--table-header);
+
   --color-blueberry-10: var(--blueberry-10);
   --color-blueberry-20: var(--blueberry-20);
   --color-blueberry-30: var(--blueberry-30);
@@ -165,16 +166,16 @@
   --color-cempedak-90: var(--cempedak-90);
   --color-cempedak-100: var(--cempedak-100);
 
-  --color-rambutan-10: var(--rambutan-10);
-  --color-rambutan-20: var(--rambutan-20);
-  --color-rambutan-30: var(--rambutan-30);
-  --color-rambutan-40: var(--rambutan-40);
-  --color-rambutan-50: var(--rambutan-50);
-  --color-rambutan-60: var(--rambutan-60);
-  --color-rambutan-70: var(--rambutan-70);
-  --color-rambutan-80: var(--rambutan-80);
-  --color-rambutan-90: var(--rambutan-90);
-  --color-rambutan-100: var(--rambutan-100);
+  --color-rambutant-10: var(--rambutant-10);
+  --color-rambutant-20: var(--rambutant-20);
+  --color-rambutant-30: var(--rambutant-30);
+  --color-rambutant-40: var(--rambutant-40);
+  --color-rambutant-50: var(--rambutant-50);
+  --color-rambutant-60: var(--rambutant-60);
+  --color-rambutant-70: var(--rambutant-70);
+  --color-rambutant-80: var(--rambutant-80);
+  --color-rambutant-90: var(--rambutant-90);
+  --color-rambutant-100: var(--rambutant-100);
 
   --color-mono-0: var(--mono-0);
   --color-mono-20: var(--mono-20);
@@ -203,6 +204,28 @@
   --color-gradient-60: var(--gradient-60);
   --color-gradient-80: var(--gradient-80);
   --color-gradient-100: var(--gradient-100);
+
+  --color-red-10: var(--red-10);
+  --color-red-20: var(--red-20);
+  --color-red-30: var(--red-30);
+  --color-red-40: var(--red-40);
+  --color-red-50: var(--red-50);
+  --color-red-60: var(--red-60);
+  --color-red-70: var(--red-70);
+  --color-red-80: var(--red-80);
+  --color-red-90: var(--red-90);
+  --color-red-100: var(--red-100);
+
+  --color-orange-10: var(--orange-10);
+  --color-orange-20: var(--orange-20);
+  --color-orange-30: var(--orange-30);
+  --color-orange-40: var(--orange-40);
+  --color-orange-50: var(--orange-50);
+  --color-orange-60: var(--orange-60);
+  --color-orange-70: var(--orange-70);
+  --color-orange-80: var(--orange-80);
+  --color-orange-90: var(--orange-90);
+  --color-orange-100: var(--orange-100);
 }
 
 @layer utilities {
@@ -926,125 +949,125 @@
   .hover\:text-cempedak-100:hover {
     color: var(--cempedak-100);
   }
-  .bg-rambutan-10 {
-    background-color: var(--rambutan-10);
+  .bg-rambutant-10 {
+    background-color: var(--rambutant-10);
   }
-  .text-rambutan-10 {
-    color: var(--rambutan-10);
+  .text-rambutant-10 {
+    color: var(--rambutant-10);
   }
-  .hover\:bg-rambutan-10:hover {
-    background-color: var(--rambutan-10);
+  .hover\:bg-rambutant-10:hover {
+    background-color: var(--rambutant-10);
   }
-  .hover\:text-rambutan-10:hover {
-    color: var(--rambutan-10);
+  .hover\:text-rambutant-10:hover {
+    color: var(--rambutant-10);
   }
-  .bg-rambutan-20 {
-    background-color: var(--rambutan-20);
+  .bg-rambutant-20 {
+    background-color: var(--rambutant-20);
   }
-  .text-rambutan-20 {
-    color: var(--rambutan-20);
+  .text-rambutant-20 {
+    color: var(--rambutant-20);
   }
-  .hover\:bg-rambutan-20:hover {
-    background-color: var(--rambutan-20);
+  .hover\:bg-rambutant-20:hover {
+    background-color: var(--rambutant-20);
   }
-  .hover\:text-rambutan-20:hover {
-    color: var(--rambutan-20);
+  .hover\:text-rambutant-20:hover {
+    color: var(--rambutant-20);
   }
-  .bg-rambutan-30 {
-    background-color: var(--rambutan-30);
+  .bg-rambutant-30 {
+    background-color: var(--rambutant-30);
   }
-  .text-rambutan-30 {
-    color: var(--rambutan-30);
+  .text-rambutant-30 {
+    color: var(--rambutant-30);
   }
-  .hover\:bg-rambutan-30:hover {
-    background-color: var(--rambutan-30);
+  .hover\:bg-rambutant-30:hover {
+    background-color: var(--rambutant-30);
   }
-  .hover\:text-rambutan-30:hover {
-    color: var(--rambutan-30);
+  .hover\:text-rambutant-30:hover {
+    color: var(--rambutant-30);
   }
-  .bg-rambutan-40 {
-    background-color: var(--rambutan-40);
+  .bg-rambutant-40 {
+    background-color: var(--rambutant-40);
   }
-  .text-rambutan-40 {
-    color: var(--rambutan-40);
+  .text-rambutant-40 {
+    color: var(--rambutant-40);
   }
-  .hover\:bg-rambutan-40:hover {
-    background-color: var(--rambutan-40);
+  .hover\:bg-rambutant-40:hover {
+    background-color: var(--rambutant-40);
   }
-  .hover\:text-rambutan-40:hover {
-    color: var(--rambutan-40);
+  .hover\:text-rambutant-40:hover {
+    color: var(--rambutant-40);
   }
-  .bg-rambutan-50 {
-    background-color: var(--rambutan-50);
+  .bg-rambutant-50 {
+    background-color: var(--rambutant-50);
   }
-  .text-rambutan-50 {
-    color: var(--rambutan-50);
+  .text-rambutant-50 {
+    color: var(--rambutant-50);
   }
-  .hover\:bg-rambutan-50:hover {
-    background-color: var(--rambutan-50);
+  .hover\:bg-rambutant-50:hover {
+    background-color: var(--rambutant-50);
   }
-  .hover\:text-rambutan-50:hover {
-    color: var(--rambutan-50);
+  .hover\:text-rambutant-50:hover {
+    color: var(--rambutant-50);
   }
-  .bg-rambutan-60 {
-    background-color: var(--rambutan-60);
+  .bg-rambutant-60 {
+    background-color: var(--rambutant-60);
   }
-  .text-rambutan-60 {
-    color: var(--rambutan-60);
+  .text-rambutant-60 {
+    color: var(--rambutant-60);
   }
-  .hover\:bg-rambutan-60:hover {
-    background-color: var(--rambutan-60);
+  .hover\:bg-rambutant-60:hover {
+    background-color: var(--rambutant-60);
   }
-  .hover\:text-rambutan-60:hover {
-    color: var(--rambutan-60);
+  .hover\:text-rambutant-60:hover {
+    color: var(--rambutant-60);
   }
-  .bg-rambutan-70 {
-    background-color: var(--rambutan-70);
+  .bg-rambutant-70 {
+    background-color: var(--rambutant-70);
   }
-  .text-rambutan-70 {
-    color: var(--rambutan-70);
+  .text-rambutant-70 {
+    color: var(--rambutant-70);
   }
-  .hover\:bg-rambutan-70:hover {
-    background-color: var(--rambutan-70);
+  .hover\:bg-rambutant-70:hover {
+    background-color: var(--rambutant-70);
   }
-  .hover\:text-rambutan-70:hover {
-    color: var(--rambutan-70);
+  .hover\:text-rambutant-70:hover {
+    color: var(--rambutant-70);
   }
-  .bg-rambutan-80 {
-    background-color: var(--rambutan-80);
+  .bg-rambutant-80 {
+    background-color: var(--rambutant-80);
   }
-  .text-rambutan-80 {
-    color: var(--rambutan-80);
+  .text-rambutant-80 {
+    color: var(--rambutant-80);
   }
-  .hover\:bg-rambutan-80:hover {
-    background-color: var(--rambutan-80);
+  .hover\:bg-rambutant-80:hover {
+    background-color: var(--rambutant-80);
   }
-  .hover\:text-rambutan-80:hover {
-    color: var(--rambutan-80);
+  .hover\:text-rambutant-80:hover {
+    color: var(--rambutant-80);
   }
-  .bg-rambutan-90 {
-    background-color: var(--rambutan-90);
+  .bg-rambutant-90 {
+    background-color: var(--rambutant-90);
   }
-  .text-rambutan-90 {
-    color: var(--rambutan-90);
+  .text-rambutant-90 {
+    color: var(--rambutant-90);
   }
-  .hover\:bg-rambutan-90:hover {
-    background-color: var(--rambutan-90);
+  .hover\:bg-rambutant-90:hover {
+    background-color: var(--rambutant-90);
   }
-  .hover\:text-rambutan-90:hover {
-    color: var(--rambutan-90);
+  .hover\:text-rambutant-90:hover {
+    color: var(--rambutant-90);
   }
-  .bg-rambutan-100 {
-    background-color: var(--rambutan-100);
+  .bg-rambutant-100 {
+    background-color: var(--rambutant-100);
   }
-  .text-rambutan-100 {
-    color: var(--rambutan-100);
+  .text-rambutant-100 {
+    color: var(--rambutant-100);
   }
-  .hover\:bg-rambutan-100:hover {
-    background-color: var(--rambutan-100);
+  .hover\:bg-rambutant-100:hover {
+    background-color: var(--rambutant-100);
   }
-  .hover\:text-rambutan-100:hover {
-    color: var(--rambutan-100);
+  .hover\:text-rambutant-100:hover {
+    color: var(--rambutant-100);
   }
   .bg-mono-0 {
     background-color: var(--mono-0);
@@ -1346,6 +1369,292 @@
   .hover\:text-gradient-100:hover {
     color: var(--gradient-100);
   }
+
+  .bg-red-0 {
+    background-color: var(--red-0);
+  }
+  .text-red-0 {
+    color: var(--red-0);
+  }
+  .hover\:bg-red-0:hover {
+    background-color: var(--red-0);
+  }
+  .hover\:text-red-0:hover {
+    color: var(--red-0);
+  }
+
+  .bg-red-10 {
+    background-color: var(--red-10);
+  }
+  .text-red-10 {
+    color: var(--red-10);
+  }
+  .hover\:bg-red-10:hover {
+    background-color: var(--red-10);
+  }
+  .hover\:text-red-10:hover {
+    color: var(--red-10);
+  }
+
+  .bg-red-20 {
+    background-color: var(--red-20);
+  }
+  .text-red-20 {
+    color: var(--red-20);
+  }
+  .hover\:bg-red-20:hover {
+    background-color: var(--red-20);
+  }
+  .hover\:text-red-20:hover {
+    color: var(--red-20);
+  }
+
+  .bg-red-30 {
+    background-color: var(--red-30);
+  }
+  .text-red-30 {
+    color: var(--red-30);
+  }
+  .hover\:bg-red-30:hover {
+    background-color: var(--red-30);
+  }
+  .hover\:text-red-30:hover {
+    color: var(--red-30);
+  }
+
+  .bg-red-40 {
+    background-color: var(--red-40);
+  }
+  .text-red-40 {
+    color: var(--red-40);
+  }
+  .hover\:bg-red-40:hover {
+    background-color: var(--red-40);
+  }
+  .hover\:text-red-40:hover {
+    color: var(--red-40);
+  }
+
+  .bg-red-50 {
+    background-color: var(--red-50);
+  }
+  .text-red-50 {
+    color: var(--red-50);
+  }
+  .hover\:bg-red-50:hover {
+    background-color: var(--red-50);
+  }
+  .hover\:text-red-50:hover {
+    color: var(--red-50);
+  }
+
+  .bg-red-60 {
+    background-color: var(--red-60);
+  }
+  .text-red-60 {
+    color: var(--red-60);
+  }
+  .hover\:bg-red-60:hover {
+    background-color: var(--red-60);
+  }
+  .hover\:text-red-60:hover {
+    color: var(--red-60);
+  }
+
+  .bg-red-70 {
+    background-color: var(--red-70);
+  }
+  .text-red-70 {
+    color: var(--red-70);
+  }
+  .hover\:bg-red-70:hover {
+    background-color: var(--red-70);
+  }
+  .hover\:text-red-70:hover {
+    color: var(--red-70);
+  }
+
+  .bg-red-80 {
+    background-color: var(--red-80);
+  }
+  .text-red-80 {
+    color: var(--red-80);
+  }
+  .hover\:bg-red-80:hover {
+    background-color: var(--red-80);
+  }
+  .hover\:text-red-80:hover {
+    color: var(--red-80);
+  }
+
+  .bg-red-90 {
+    background-color: var(--red-90);
+  }
+  .text-red-90 {
+    color: var(--red-90);
+  }
+  .hover\:bg-red-90:hover {
+    background-color: var(--red-90);
+  }
+  .hover\:text-red-90:hover {
+    color: var(--red-90);
+  }
+
+  .bg-red-100 {
+    background-color: var(--red-100);
+  }
+  .text-red-100 {
+    color: var(--red-100);
+  }
+  .hover\:bg-red-100:hover {
+    background-color: var(--red-100);
+  }
+  .hover\:text-red-100:hover {
+    color: var(--red-100);
+  }
+
+  .bg-orange-0 {
+    background-color: var(--orange-0);
+  }
+  .text-orange-0 {
+    color: var(--orange-0);
+  }
+  .hover\:bg-orange-0:hover {
+    background-color: var(--orange-0);
+  }
+  .hover\:text-orange-0:hover {
+    color: var(--orange-0);
+  }
+
+  .bg-orange-10 {
+    background-color: var(--orange-10);
+  }
+  .text-orange-10 {
+    color: var(--orange-10);
+  }
+  .hover\:bg-orange-10:hover {
+    background-color: var(--orange-10);
+  }
+  .hover\:text-orange-10:hover {
+    color: var(--orange-10);
+  }
+
+  .bg-orange-20 {
+    background-color: var(--orange-20);
+  }
+  .text-orange-20 {
+    color: var(--orange-20);
+  }
+  .hover\:bg-orange-20:hover {
+    background-color: var(--orange-20);
+  }
+  .hover\:text-orange-20:hover {
+    color: var(--orange-20);
+  }
+
+  .bg-orange-30 {
+    background-color: var(--orange-30);
+  }
+  .text-orange-30 {
+    color: var(--orange-30);
+  }
+  .hover\:bg-orange-30:hover {
+    background-color: var(--orange-30);
+  }
+  .hover\:text-orange-30:hover {
+    color: var(--orange-30);
+  }
+
+  .bg-orange-40 {
+    background-color: var(--orange-40);
+  }
+  .text-orange-40 {
+    color: var(--orange-40);
+  }
+  .hover\:bg-orange-40:hover {
+    background-color: var(--orange-40);
+  }
+  .hover\:text-orange-40:hover {
+    color: var(--orange-40);
+  }
+
+  .bg-orange-50 {
+    background-color: var(--orange-50);
+  }
+  .text-orange-50 {
+    color: var(--orange-50);
+  }
+  .hover\:bg-orange-50:hover {
+    background-color: var(--orange-50);
+  }
+  .hover\:text-orange-50:hover {
+    color: var(--orange-50);
+  }
+
+  .bg-orange-60 {
+    background-color: var(--orange-60);
+  }
+  .text-orange-60 {
+    color: var(--orange-60);
+  }
+  .hover\:bg-orange-60:hover {
+    background-color: var(--orange-60);
+  }
+  .hover\:text-orange-60:hover {
+    color: var(--orange-60);
+  }
+
+  .bg-orange-70 {
+    background-color: var(--orange-70);
+  }
+  .text-orange-70 {
+    color: var(--orange-70);
+  }
+  .hover\:bg-orange-70:hover {
+    background-color: var(--orange-70);
+  }
+  .hover\:text-orange-70:hover {
+    color: var(--orange-70);
+  }
+
+  .bg-orange-80 {
+    background-color: var(--orange-80);
+  }
+  .text-orange-80 {
+    color: var(--orange-80);
+  }
+  .hover\:bg-orange-80:hover {
+    background-color: var(--orange-80);
+  }
+  .hover\:text-orange-80:hover {
+    color: var(--orange-80);
+  }
+
+  .bg-orange-90 {
+    background-color: var(--orange-90);
+  }
+  .text-orange-90 {
+    color: var(--orange-90);
+  }
+  .hover\:bg-orange-90:hover {
+    background-color: var(--orange-90);
+  }
+  .hover\:text-orange-90:hover {
+    color: var(--orange-90);
+  }
+
+  .bg-orange-100 {
+    background-color: var(--orange-100);
+  }
+  .text-orange-100 {
+    color: var(--orange-100);
+  }
+  .hover\:bg-orange-100:hover {
+    background-color: var(--orange-100);
+  }
+  .hover\:text-orange-100:hover {
+    color: var(--orange-100);
+  }
 }
 
 :root {
@@ -1457,16 +1766,16 @@
   --cempedak-90: #ffc42c;
   --cempedak-100: #ffbe15;
 
-  --rambutan-10: #fde7ec;
-  --rambutan-20: #facfd9;
-  --rambutan-30: #f8b7c6;
-  --rambutan-40: #f59fb3;
-  --rambutan-50: #f387a0;
-  --rambutan-60: #f06f8d;
-  --rambutan-70: #ed577a;
-  --rambutan-80: #eb3f67;
-  --rambutan-90: #e82754;
-  --rambutan-100: #df0031;
+  --rambutant-10: #fde7ec;
+  --rambutant-20: #facfd9;
+  --rambutant-30: #f8b7c6;
+  --rambutant-40: #f59fb3;
+  --rambutant-50: #f387a0;
+  --rambutant-60: #f06f8d;
+  --rambutant-70: #ed577a;
+  --rambutant-80: #eb3f67;
+  --rambutant-90: #e82754;
+  --rambutant-100: #df0031;
 
   --mono-0: #ffffff;
   --mono-20: #efefef;
@@ -1487,6 +1796,30 @@
   --neutral-80: #666666;
   --neutral-90: #4f4f4f;
   --neutral-100: #313131;
+
+  --red-0: #fff5f5;
+  --red-10: #ffe3e3;
+  --red-20: #ffc9c9;
+  --red-30: #ffa8a8;
+  --red-40: #ff8787;
+  --red-50: #ff6b6b;
+  --red-60: #fa5252;
+  --red-70: #f03e3e;
+  --red-80: #e03131;
+  --red-90: #c92a2a;
+  --red-100: #a51111;
+
+  --orange-0: #fff4e6;
+  --orange-10: #ffe8cc;
+  --orange-20: #ffd8a8;
+  --orange-30: #ffc078;
+  --orange-40: #ffa94d;
+  --orange-50: #ff922b;
+  --orange-60: #fd7e14;
+  --orange-70: #f76707;
+  --orange-80: #e8590c;
+  --orange-90: #d9480f;
+  --orange-100: #b13800;
 
   --gradient-0: #00000000;
   --gradient-10: #1a000000;
